Refactored cpp interface
Seperate class/module for image conversion and overlay rendering
Gives better seperability of tasks for running in parallel

--- a/darknet_cpp/Makefile
+++ b/darknet_cpp/Makefile
@@ -1,6 +1,10 @@
 CXX = g++
 CC = $(CXX)
 
+ifeq ($(DEBUG), 1)
+CXXFLAGS += -g -O0
+endif
+
 CXXFLAGS += -std=c++11
 
 COMMON += -DCUDNN -DGPU
@@ -22,7 +26,7 @@ LDLIBS += -lboost_filesystem -lboost_system
 CXXFLAGS += -I/usr/local/cuda/include/
 LDLIBS += -L/usr/local/cuda/lib64 -lcuda -lcuda -lcudart -lcublas -lcurand
 
-test: test.o darknet_proxy.o
+test: test.o detector.o image_overlay.o image.o
 
 clean:
 	rm -rf test *.o
