--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.png
 *.jpg
 *.pyc
+*.pc
 old/
 mnist/
 data/
@@ -18,7 +19,7 @@ convnet/
 decaf/
 submission/
 cfg/
-darknet_cpp/test
+darknet_cpp/examples/darknet_cpp_jetson_detection
 darknet
 .fuse*
 *.log
