--- a/darknet_cpp/CMakeLists.txt
+++ b/darknet_cpp/CMakeLists.txt
@@ -12,8 +12,8 @@ include(build_type)
 # flags and parameters
 set (GPU true CACHE BOOL "Use CUDA")
 set (CUDNN true CACHE BOOL "Use libcudnn")
-set (ADDRESS_SANITIZER false CACHE BOOL "Enable address sanitizer. NOTE: only works in 'Debug' mode")
-set(default_build_type "Release")
+set (ADDRESS_SANITIZER false CACHE BOOL "Enable address sanitizer. NOTE: only works without cuda/cudnn")
+set (default_build_type "Release")
 
 # print the build type
 message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
@@ -24,24 +24,26 @@ set (DARKNET_ROOT "${darknet_cpp_SOURCE_DIR}/../")
 # warning related flags
 set (CMAKE_CXX_FLAGS "-Wall -Wextra")
 
-# address sanitizer in debug mode
+# address sanitizer
 if (ADDRESS_SANITIZER)
-    set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
-    set (CMAKE_LINKER_FLAGS_DEBUG "${CMAKE_STATIC_LINKER_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-omit-frame-pointer -fsanitize=address")
+    set (CMAKE_LINKER_FLAGS "${CMAKE_LINKER_FLAGS} -fno-omit-frame-pointer -fsanitize=address")
 endif()
 
 # GPU specifics
-set (GPU_LIBS "")
 set (GPU_STR "0")
 if (${GPU})
     set (GPU_STR "1")
-    set (GPU_LIBS ${GPU_LIBS} "-L/usr/local/cuda/lib64 -lcuda -lcudart -lcublas -lcurand")
+    add_definitions(-DGPU)
+    find_package(CUDA REQUIRED)
 endif()
 
+set (CUDNN_LIBS "")
 set (CUDNN_STR "0")
 if (${CUDNN})
     set (CUDNN_STR "1")
-    set (GPU_LIBS ${GPU_LIBS} "-lcudnn")
+    add_definitions(-DCUDNN)
+    set (CUDNN_LIBS "-lcudnn")
 endif()
 
 find_package(OpenCV REQUIRED)
