Added image converter that supports rescaling
Rescaling support works exactly as original darknet:
Images are rescaled keeping original aspect ratio. Aspect ratio
mismatch between network and input image is compensated by letterboxing
(grey pixel strokes)

--- a/darknet_cpp/src/CMakeLists.txt
+++ b/darknet_cpp/src/CMakeLists.txt
@@ -3,6 +3,8 @@ include_directories (${CUDA_INCLUDE_DIRS})
 include_directories ("${DARKNET_ROOT}/include")
 
 set (HEADERS
+    convert_cv.hpp
+    convert_cv_bgr8.hpp
     darknet.hpp
     detection.hpp
     detector.hpp
@@ -12,6 +14,7 @@ set (HEADERS
 )
 
 set (SOURCES
+    convert_cv_bgr8.cpp
     detector.cpp
     image.cpp
     utils.cpp
