Implemented cmake CUDA arch autodetect
Cuda arch flags are available in cmake as caching variable and
are auto detected up front. The flags are then passed to the darknet
Makefile

--- a/darknet_cpp/CMakeLists.txt
+++ b/darknet_cpp/CMakeLists.txt
@@ -38,6 +38,9 @@ if (${WITH_GPU})
     set (WITH_GPU_STR "1")
     add_definitions(-DGPU)
     find_package(CUDA REQUIRED)
+    include(select_compute_arch)
+    CUDA_SELECT_NVCC_ARCH_FLAGS(DETECTED_COMPUTE_ARCH_FLAGS)
+    set (COMPUTE_ARCH_FLAGS ${DETECTED_COMPUTE_ARCH_FLAGS} CACHE STRING "Compute capability flags to compile for")
 endif()
 
 set (CUDNN_LIBS "")
